Closed Bug 136678 Opened 23 years ago Closed 23 years ago

byte range request fails if server returns anything other than a 206

Categories

(Core :: Networking: HTTP, defect, P1)

x86
Linux
defect

Tracking

()

VERIFIED FIXED
mozilla1.0

People

(Reporter: darin.moz, Assigned: darin.moz)

Details

(Keywords: regression, topembed, Whiteboard: [must fix])

Attachments

(1 file)

i forgot a very crucial step when i wrote the patch for bug 116365. if after issuing a byte range request, we receive anything other than a 206 response, the document load appears to stall. in actual fact, we end up buffering the downloaded data in preparation for appending it to the partial cache entry. but, since we never kick off the AsyncRead of the cache entry, we never resume processing the downloaded data. as a result the cache entry for the document never closes and future requests for the document always fail (get stuck waiting for access to the cache entry). i noticed this problem while browsing the other day and was fortunately capturing a HTTP log for another bug at the same time. the fix is really trivial and IMO is an absolutely required for mozilla 1.0
Severity: normal → critical
Status: NEW → ASSIGNED
Priority: -- → P1
Whiteboard: [must fix]
Target Milestone: --- → mozilla1.0
Attached patch patchSplinter Review
Attachment #78586 - Flags: review+
Comment on attachment 78586 [details] [diff] [review] patch a=asa (on behalf of drivers) for checkin to the 1.0 branch
Attachment #78586 - Flags: approval+
Keywords: adt1.0.0
adt1.0.0+ (on ADT's behalf) approval for checkin to the 1.0 branch. Pls check this into the trunk and 1.0 branch today.
Keywords: adt1.0.0adt1.0.0+
fixed-on-trunk fixed-on-branch
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
verified - 04/11/02 branch and trunk, all platforms
Status: RESOLVED → VERIFIED
adding verified1.0.0 keyword (branch verification) based on bonsai checkin and QA comments.
Keywords: verified1.0.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: