fixes bug 136678 "byte range request fails if server returns anything other than 206" r=dougt sr=rpotts